--- a/Proyecto0/src/main/webapp/carrito.html
+++ b/Proyecto0/src/main/webapp/carrito.html
@@ -104,9 +104,9 @@
 									</div>
 								</div>
 								<div class="carrito py-4 text-center">
-									<div >
-									<p></p>
-									<br>
+									<div>
+										<p></p>
+										<br>
 									</div>
 								</div>
 								<button type="submit" class="btn btn-block bg-light">
@@ -160,8 +160,10 @@
 								<div class="carrito py-5 text-center">
 									<div id="mostrarCarrito">
 										<p>
-											Total (Incl. IVA): <span id="precioTotal"></span>
+											<span id="precioTotal"></span>
 										</p>
+										<button onclick="mostrarPrecioTotal()">Mostrar Precio
+											Total</button>
 									</div>
 								</div>
 								<button type="button" class="btn bg-light"
