--- a/Proyecto0/src/main/webapp/index.html
+++ b/Proyecto0/src/main/webapp/index.html
@@ -6,7 +6,10 @@
 <title>Koenigsegg</title>
 <meta name="description"
 	content="Pagina web de compra de coches de lujo">
-<meta name="author" content="Alvaro Garcia Barrera">
+<meta name="author" content="Alvaro Garcia Barrero">
+<meta name="description"
+	content="Pagina web de compra de coches de lujo">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="Alvaro Garcia Barrera" name="edu.agbProyectoBootstrap">
 <link href="custom.css" rel="stylesheet">
 <link
