--- a/Proyecto0/src/main/webapp/gt.html
+++ b/Proyecto0/src/main/webapp/gt.html
@@ -7,6 +7,7 @@
 <meta name="description"
 	content="Pagina web de compra de coches de lujo">
 <meta name="author" content="Alvaro Garcia Barrera">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="custom.css" rel="stylesheet">
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
