--- a/Proyecto0/src/main/webapp/inicioSesion.html
+++ b/Proyecto0/src/main/webapp/inicioSesion.html
@@ -7,6 +7,7 @@
 	content="Pagina web de compra de coches de lujo">
 <meta name="author" content="Alvaro Garcia Barrera">
 <meta name="Alvaro Garcia Barrera" name="edu.agbProyectoBootstrap">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="custom.css" rel="stylesheet">
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -53,10 +54,10 @@
 	<br>
 	<br>
 	<main>
-		<div class="container mt-5">
+		<div class="container mt-5 borde">
 			<div class="row justify-content-center">
 				<div class="col-md-6">
-					<div class="tab-container">
+					<div class="tab-container table-responsive">
 						<div class="tab">
 							<h2>Registrarse</h2>
 							<form id="registrarUsuario" onsubmit="return registrarUsuario()">
