--- a/Proyecto0/src/main/webapp/rs.html
+++ b/Proyecto0/src/main/webapp/rs.html
@@ -7,6 +7,7 @@
 <meta name="description"
 	content="Pagina web de compra de coches de lujo">
 <meta name="author" content="Alvaro Garcia Barrera">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="custom.css" rel="stylesheet">
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -50,9 +51,7 @@
 	</header>
 
 	<main>
-		<br>
-		<br>
-		<br>
+		<br> <br> <br>
 		<section class="container separacion">
 			<div class="row align-items-center">
 				<div class="col-md-5 mb-3 mb-md-0 order-md-1">
